# nova

./: .gitignore  AI_HANDOFF.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  INDEX.md  NOVA_TypeSystem_v0.1.docx  PHASE_0_COMPLETE.md  PHASE_0_SUMMARY.md  PHASE_1_ROADMAP.md  README.md  RELEASE_STATUS.md  description.md  plan.md  readme.md  suggestionsandquestions.md
compiler/: build.sh
compiler/autodiff/: Cargo.toml
compiler/autodiff/src/: gradient.rs  graph.rs  lib.rs
compiler/autodiff/tests/: test_autodiff.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: ffi.rs  ir_emitter.rs  lib.rs  parallel_scheduler.rs
compiler/semantic/: Cargo.toml
compiler/semantic/src/: lib.rs
compiler/tensor_lowering/: Cargo.toml
compiler/tensor_lowering/src/: lib.rs  matmul.rs  shape_check.rs
compiler/typechecker/: Cargo.toml
compiler/typechecker/src/: infer.rs  lib.rs  tensor_types.rs  traits.rs  types.rs  unify.rs
compiler/unit_resolver/: Cargo.toml
compiler/unit_resolver/src/: custom_units.rs  dimension.rs  lib.rs  si_table.rs
compiler/unit_resolver/tests/: test_units.rs
nova-compiler/: Cargo.toml  README.md
nova-compiler/examples/: constellation_example.nv  hello_universe.nv  model_example.nv  stellar_analysis.nv  tests.nv  units_example.nv
nova-compiler/src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_new.rs
nova-compiler/tests/: parser_tests.rs
toolchain/nebula/: Cargo.toml
toolchain/nebula/src/: main.rs  resolver.rs
toolchain/nova_fmt/: Cargo.toml
toolchain/nova_fmt/src/: formatter.rs  lib.rs
toolchain/nova_ls/: Cargo.toml
toolchain/nova_ls/src/: diagnostics.rs  hover.rs  lib.rs
