[package]
name = "nova-compiler"
version = "0.1.0"
edition = "2021"
authors = ["NOVA Language Project"]
description = "NOVA compiler: lexer, parser, and AST for phase 0"

[dependencies]
# No external dependencies needed for Phase 0 (lexer + parser only)

[dev-dependencies]
# Testing framework already in std

[[bin]]
name = "nova"
path = "src/main.rs"

[lib]
name = "nova_compiler"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
