[package]
name        = "nova_autodiff"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
nova_typechecker = { path = "../typechecker" }
nova_unit_resolver = { path = "../unit_resolver" }
